--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+
+    <!--<button id="toggleLang" onclick="toggleLanguage()">Français</button>-->
+
     <div class="container">
         <h1>WeatherWear</h1>
         <p>Get personalized clothing recommendations based on the weather forecast.</p>
 
         <form id="weatherForm">
             <label for="location">Enter Location:</label>
-            <input type="text" id="location" placeholder="e.g., London, New York" required>
+            <input type="text" id="location" placeholder="Put your city here criss" required>
 
             <label for="date">Select Date:</label>
             <input type="date" id="date" required>
