Add .gitignore to exclude config.js and update index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <!-- NE PAS OUBLIER DE RAJOUTER LE UI AVEC LES PHOTOS-->
     <!--<button id="toggleLang" onclick="toggleLanguage()">Français</button>-->
 
     <div class="container">
@@ -16,7 +17,7 @@
 
         <form id="weatherForm">
             <label for="location">Enter Location:</label>
-            <input type="text" id="location" placeholder="Put your city here criss" required>
+            <input type="text" id="location" placeholder="What's your city ?" required>
 
             <label for="date">Select Date:</label>
             <input type="date" id="date" required>
@@ -30,6 +31,7 @@
     </div>
 
     <script src="./scripts/script.js"></script>
+    <scrit src="config.js"></scrit>
     <script src="serveur.js"></script>
 </body>
 </html>
