Update Super Linter configuration, enhance README, and refine HTML/CSS structure

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <h1>WeatherWear</h1>
         <p>Get personalized clothing recommendations based on the weather forecast.</p>
 
-        <form id="weatherForm">
+        <form id="weather-form">
             <label for="location">Enter Location:</label>
             <input type="text" id="location" placeholder="What's your city?" required>
 
