Ajout du curseur personnalisé

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
         </div>
     </div>
 
+    <!-- Custom Cursor Element -->
+    <div class="custom-cursor"></div>
+    
+
+
     <script src="./scripts/script.js"></script>
 </body>
 </html>
