--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherWear - Clothing Recommendations</title>
+    <link rel="website icon" type="png" href="images/title.png">
     <link rel="stylesheet" href="./css/styles.css">
         <!-- Font Orbitron -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
